--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,3 +1,4 @@
+
 html, body {
     background-color: #fff;
     font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -114,4 +115,9 @@ nav ul li a:hover {
 }
 .swal-button {
   padding: 1px 24px !important;
+}
+
+.forum-editor, .forums {
+  border-bottom: 1px solid lightgrey;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
